// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Google Login With children, custom text, and default props has inline styles 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "#fff",
  "border": "1px solid transparent",
  "borderRadius": 2,
  "boxShadow": "0 2px 2px 0 rgba(0, 0, 0, .24), 0 0 1px 0 rgba(0, 0, 0, .24)",
  "color": "rgba(0, 0, 0, .54)",
  "display": "inline-flex",
  "fontFamily": "Roboto, sans-serif",
  "fontSize": 14,
  "fontWeight": "500",
  "opacity": 0.6,
  "padding": 0,
}
`;

exports[`Google Login With children, custom text, and default props render the button 1`] = `
<button
  disabled={true}
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "border": "1px solid transparent",
      "borderRadius": 2,
      "boxShadow": "0 2px 2px 0 rgba(0, 0, 0, .24), 0 0 1px 0 rgba(0, 0, 0, .24)",
      "color": "rgba(0, 0, 0, .54)",
      "display": "inline-flex",
      "fontFamily": "Roboto, sans-serif",
      "fontSize": 14,
      "fontWeight": "500",
      "opacity": 0.6,
      "padding": 0,
    }
  }
  type="button"
>
  <div
    style={
      Object {
        "background": "#fff",
        "borderRadius": 2,
        "marginRight": 10,
        "padding": 10,
      }
    }
  >
    <svg
      height="18"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="#000"
        fillRule="evenodd"
      >
        <path
          d="M9 3.48c1.69 0 2.83.73 3.48 1.34l2.54-2.48C13.46.89 11.43 0 9 0 5.48 0 2.44 2.02.96 4.96l2.91 2.26C4.6 5.05 6.62 3.48 9 3.48z"
          fill="#EA4335"
        />
        <path
          d="M17.64 9.2c0-.74-.06-1.28-.19-1.84H9v3.34h4.96c-.1.83-.64 2.08-1.84 2.92l2.84 2.2c1.7-1.57 2.68-3.88 2.68-6.62z"
          fill="#4285F4"
        />
        <path
          d="M3.88 10.78A5.54 5.54 0 0 1 3.58 9c0-.62.11-1.22.29-1.78L.96 4.96A9.008 9.008 0 0 0 0 9c0 1.45.35 2.82.96 4.04l2.92-2.26z"
          fill="#FBBC05"
        />
        <path
          d="M9 18c2.43 0 4.47-.8 5.96-2.18l-2.84-2.2c-.76.53-1.78.9-3.12.9-2.38 0-4.4-1.57-5.12-3.74L.97 13.04C2.45 15.98 5.48 18 9 18z"
          fill="#34A853"
        />
        <path
          d="M0 0h18v18H0z"
          fill="none"
        />
      </g>
    </svg>
  </div>
  <span
    style={
      Object {
        "fontWeight": 500,
        "paddingBottom": 10,
        "paddingLeft": 0,
        "paddingRight": 10,
        "paddingTop": 10,
      }
    }
  >
    test
  </span>
</button>
`;

exports[`Google Login With custom class and custom style has inline styles 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "#fff",
  "border": "1px solid transparent",
  "borderRadius": 2,
  "boxShadow": "0 2px 2px 0 rgba(0, 0, 0, .24), 0 0 1px 0 rgba(0, 0, 0, .24)",
  "color": "rgba(0, 0, 0, .54)",
  "display": "inline-flex",
  "fontFamily": "Roboto, sans-serif",
  "fontSize": 14,
  "fontWeight": "500",
  "opacity": 0.6,
  "padding": 0,
}
`;

exports[`Google Login With custom class and custom style render the button 1`] = `
<button
  className="test-class"
  disabled={true}
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "border": "1px solid transparent",
      "borderRadius": 2,
      "boxShadow": "0 2px 2px 0 rgba(0, 0, 0, .24), 0 0 1px 0 rgba(0, 0, 0, .24)",
      "color": "rgba(0, 0, 0, .54)",
      "display": "inline-flex",
      "fontFamily": "Roboto, sans-serif",
      "fontSize": 14,
      "fontWeight": "500",
      "opacity": 0.6,
      "padding": 0,
    }
  }
  type="button"
>
  <div
    style={
      Object {
        "background": "#fff",
        "borderRadius": 2,
        "marginRight": 10,
        "padding": 10,
      }
    }
  >
    <svg
      height="18"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="#000"
        fillRule="evenodd"
      >
        <path
          d="M9 3.48c1.69 0 2.83.73 3.48 1.34l2.54-2.48C13.46.89 11.43 0 9 0 5.48 0 2.44 2.02.96 4.96l2.91 2.26C4.6 5.05 6.62 3.48 9 3.48z"
          fill="#EA4335"
        />
        <path
          d="M17.64 9.2c0-.74-.06-1.28-.19-1.84H9v3.34h4.96c-.1.83-.64 2.08-1.84 2.92l2.84 2.2c1.7-1.57 2.68-3.88 2.68-6.62z"
          fill="#4285F4"
        />
        <path
          d="M3.88 10.78A5.54 5.54 0 0 1 3.58 9c0-.62.11-1.22.29-1.78L.96 4.96A9.008 9.008 0 0 0 0 9c0 1.45.35 2.82.96 4.04l2.92-2.26z"
          fill="#FBBC05"
        />
        <path
          d="M9 18c2.43 0 4.47-.8 5.96-2.18l-2.84-2.2c-.76.53-1.78.9-3.12.9-2.38 0-4.4-1.57-5.12-3.74L.97 13.04C2.45 15.98 5.48 18 9 18z"
          fill="#34A853"
        />
        <path
          d="M0 0h18v18H0z"
          fill="none"
        />
      </g>
    </svg>
  </div>
  <span
    style={
      Object {
        "fontWeight": 500,
        "paddingBottom": 10,
        "paddingLeft": 0,
        "paddingRight": 10,
        "paddingTop": 10,
      }
    }
  >
    Sign in with Google
  </span>
</button>
`;

exports[`Google Login With custom class and default props has inline styles 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "#fff",
  "border": "1px solid transparent",
  "borderRadius": 2,
  "boxShadow": "0 2px 2px 0 rgba(0, 0, 0, .24), 0 0 1px 0 rgba(0, 0, 0, .24)",
  "color": "rgba(0, 0, 0, .54)",
  "display": "inline-flex",
  "fontFamily": "Roboto, sans-serif",
  "fontSize": 14,
  "fontWeight": "500",
  "opacity": 0.6,
  "padding": 0,
}
`;

exports[`Google Login With custom class and default props render the button 1`] = `
<button
  className="test-class"
  disabled={true}
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "border": "1px solid transparent",
      "borderRadius": 2,
      "boxShadow": "0 2px 2px 0 rgba(0, 0, 0, .24), 0 0 1px 0 rgba(0, 0, 0, .24)",
      "color": "rgba(0, 0, 0, .54)",
      "display": "inline-flex",
      "fontFamily": "Roboto, sans-serif",
      "fontSize": 14,
      "fontWeight": "500",
      "opacity": 0.6,
      "padding": 0,
    }
  }
  type="button"
>
  <div
    style={
      Object {
        "background": "#fff",
        "borderRadius": 2,
        "marginRight": 10,
        "padding": 10,
      }
    }
  >
    <svg
      height="18"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="#000"
        fillRule="evenodd"
      >
        <path
          d="M9 3.48c1.69 0 2.83.73 3.48 1.34l2.54-2.48C13.46.89 11.43 0 9 0 5.48 0 2.44 2.02.96 4.96l2.91 2.26C4.6 5.05 6.62 3.48 9 3.48z"
          fill="#EA4335"
        />
        <path
          d="M17.64 9.2c0-.74-.06-1.28-.19-1.84H9v3.34h4.96c-.1.83-.64 2.08-1.84 2.92l2.84 2.2c1.7-1.57 2.68-3.88 2.68-6.62z"
          fill="#4285F4"
        />
        <path
          d="M3.88 10.78A5.54 5.54 0 0 1 3.58 9c0-.62.11-1.22.29-1.78L.96 4.96A9.008 9.008 0 0 0 0 9c0 1.45.35 2.82.96 4.04l2.92-2.26z"
          fill="#FBBC05"
        />
        <path
          d="M9 18c2.43 0 4.47-.8 5.96-2.18l-2.84-2.2c-.76.53-1.78.9-3.12.9-2.38 0-4.4-1.57-5.12-3.74L.97 13.04C2.45 15.98 5.48 18 9 18z"
          fill="#34A853"
        />
        <path
          d="M0 0h18v18H0z"
          fill="none"
        />
      </g>
    </svg>
  </div>
  <span
    style={
      Object {
        "fontWeight": 500,
        "paddingBottom": 10,
        "paddingLeft": 0,
        "paddingRight": 10,
        "paddingTop": 10,
      }
    }
  >
    Sign in with Google
  </span>
</button>
`;

exports[`Google Login With custom text and default props has inline styles 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "#fff",
  "border": "1px solid transparent",
  "borderRadius": 2,
  "boxShadow": "0 2px 2px 0 rgba(0, 0, 0, .24), 0 0 1px 0 rgba(0, 0, 0, .24)",
  "color": "rgba(0, 0, 0, .54)",
  "display": "inline-flex",
  "fontFamily": "Roboto, sans-serif",
  "fontSize": 14,
  "fontWeight": "500",
  "opacity": 0.6,
  "padding": 0,
}
`;

exports[`Google Login With custom text and default props render the button 1`] = `
<button
  disabled={true}
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "border": "1px solid transparent",
      "borderRadius": 2,
      "boxShadow": "0 2px 2px 0 rgba(0, 0, 0, .24), 0 0 1px 0 rgba(0, 0, 0, .24)",
      "color": "rgba(0, 0, 0, .54)",
      "display": "inline-flex",
      "fontFamily": "Roboto, sans-serif",
      "fontSize": 14,
      "fontWeight": "500",
      "opacity": 0.6,
      "padding": 0,
    }
  }
  type="button"
>
  <div
    style={
      Object {
        "background": "#fff",
        "borderRadius": 2,
        "marginRight": 10,
        "padding": 10,
      }
    }
  >
    <svg
      height="18"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="#000"
        fillRule="evenodd"
      >
        <path
          d="M9 3.48c1.69 0 2.83.73 3.48 1.34l2.54-2.48C13.46.89 11.43 0 9 0 5.48 0 2.44 2.02.96 4.96l2.91 2.26C4.6 5.05 6.62 3.48 9 3.48z"
          fill="#EA4335"
        />
        <path
          d="M17.64 9.2c0-.74-.06-1.28-.19-1.84H9v3.34h4.96c-.1.83-.64 2.08-1.84 2.92l2.84 2.2c1.7-1.57 2.68-3.88 2.68-6.62z"
          fill="#4285F4"
        />
        <path
          d="M3.88 10.78A5.54 5.54 0 0 1 3.58 9c0-.62.11-1.22.29-1.78L.96 4.96A9.008 9.008 0 0 0 0 9c0 1.45.35 2.82.96 4.04l2.92-2.26z"
          fill="#FBBC05"
        />
        <path
          d="M9 18c2.43 0 4.47-.8 5.96-2.18l-2.84-2.2c-.76.53-1.78.9-3.12.9-2.38 0-4.4-1.57-5.12-3.74L.97 13.04C2.45 15.98 5.48 18 9 18z"
          fill="#34A853"
        />
        <path
          d="M0 0h18v18H0z"
          fill="none"
        />
      </g>
    </svg>
  </div>
  <span
    style={
      Object {
        "fontWeight": 500,
        "paddingBottom": 10,
        "paddingLeft": 0,
        "paddingRight": 10,
        "paddingTop": 10,
      }
    }
  >
    buttonText
  </span>
</button>
`;

exports[`Google Login With default props has inline styles 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "#fff",
  "border": "1px solid transparent",
  "borderRadius": 2,
  "boxShadow": "0 2px 2px 0 rgba(0, 0, 0, .24), 0 0 1px 0 rgba(0, 0, 0, .24)",
  "color": "rgba(0, 0, 0, .54)",
  "display": "inline-flex",
  "fontFamily": "Roboto, sans-serif",
  "fontSize": 14,
  "fontWeight": "500",
  "opacity": 0.6,
  "padding": 0,
}
`;

exports[`Google Login With default props render the button 1`] = `
<button
  disabled={true}
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "border": "1px solid transparent",
      "borderRadius": 2,
      "boxShadow": "0 2px 2px 0 rgba(0, 0, 0, .24), 0 0 1px 0 rgba(0, 0, 0, .24)",
      "color": "rgba(0, 0, 0, .54)",
      "display": "inline-flex",
      "fontFamily": "Roboto, sans-serif",
      "fontSize": 14,
      "fontWeight": "500",
      "opacity": 0.6,
      "padding": 0,
    }
  }
  type="button"
>
  <div
    style={
      Object {
        "background": "#fff",
        "borderRadius": 2,
        "marginRight": 10,
        "padding": 10,
      }
    }
  >
    <svg
      height="18"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="#000"
        fillRule="evenodd"
      >
        <path
          d="M9 3.48c1.69 0 2.83.73 3.48 1.34l2.54-2.48C13.46.89 11.43 0 9 0 5.48 0 2.44 2.02.96 4.96l2.91 2.26C4.6 5.05 6.62 3.48 9 3.48z"
          fill="#EA4335"
        />
        <path
          d="M17.64 9.2c0-.74-.06-1.28-.19-1.84H9v3.34h4.96c-.1.83-.64 2.08-1.84 2.92l2.84 2.2c1.7-1.57 2.68-3.88 2.68-6.62z"
          fill="#4285F4"
        />
        <path
          d="M3.88 10.78A5.54 5.54 0 0 1 3.58 9c0-.62.11-1.22.29-1.78L.96 4.96A9.008 9.008 0 0 0 0 9c0 1.45.35 2.82.96 4.04l2.92-2.26z"
          fill="#FBBC05"
        />
        <path
          d="M9 18c2.43 0 4.47-.8 5.96-2.18l-2.84-2.2c-.76.53-1.78.9-3.12.9-2.38 0-4.4-1.57-5.12-3.74L.97 13.04C2.45 15.98 5.48 18 9 18z"
          fill="#34A853"
        />
        <path
          d="M0 0h18v18H0z"
          fill="none"
        />
      </g>
    </svg>
  </div>
  <span
    style={
      Object {
        "fontWeight": 500,
        "paddingBottom": 10,
        "paddingLeft": 0,
        "paddingRight": 10,
        "paddingTop": 10,
      }
    }
  >
    Sign in with Google
  </span>
</button>
`;

exports[`Google Login With handles custom tag prop has inline styles 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "#fff",
  "border": "1px solid transparent",
  "borderRadius": 2,
  "boxShadow": "0 2px 2px 0 rgba(0, 0, 0, .24), 0 0 1px 0 rgba(0, 0, 0, .24)",
  "color": "rgba(0, 0, 0, .54)",
  "display": "inline-flex",
  "fontFamily": "Roboto, sans-serif",
  "fontSize": 14,
  "fontWeight": "500",
  "opacity": 0.6,
  "padding": 0,
}
`;

exports[`Google Login With handles custom tag prop render the button 1`] = `
<div
  disabled={true}
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "border": "1px solid transparent",
      "borderRadius": 2,
      "boxShadow": "0 2px 2px 0 rgba(0, 0, 0, .24), 0 0 1px 0 rgba(0, 0, 0, .24)",
      "color": "rgba(0, 0, 0, .54)",
      "display": "inline-flex",
      "fontFamily": "Roboto, sans-serif",
      "fontSize": 14,
      "fontWeight": "500",
      "opacity": 0.6,
      "padding": 0,
    }
  }
  type="button"
>
  <div
    style={
      Object {
        "background": "#fff",
        "borderRadius": 2,
        "marginRight": 10,
        "padding": 10,
      }
    }
  >
    <svg
      height="18"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="#000"
        fillRule="evenodd"
      >
        <path
          d="M9 3.48c1.69 0 2.83.73 3.48 1.34l2.54-2.48C13.46.89 11.43 0 9 0 5.48 0 2.44 2.02.96 4.96l2.91 2.26C4.6 5.05 6.62 3.48 9 3.48z"
          fill="#EA4335"
        />
        <path
          d="M17.64 9.2c0-.74-.06-1.28-.19-1.84H9v3.34h4.96c-.1.83-.64 2.08-1.84 2.92l2.84 2.2c1.7-1.57 2.68-3.88 2.68-6.62z"
          fill="#4285F4"
        />
        <path
          d="M3.88 10.78A5.54 5.54 0 0 1 3.58 9c0-.62.11-1.22.29-1.78L.96 4.96A9.008 9.008 0 0 0 0 9c0 1.45.35 2.82.96 4.04l2.92-2.26z"
          fill="#FBBC05"
        />
        <path
          d="M9 18c2.43 0 4.47-.8 5.96-2.18l-2.84-2.2c-.76.53-1.78.9-3.12.9-2.38 0-4.4-1.57-5.12-3.74L.97 13.04C2.45 15.98 5.48 18 9 18z"
          fill="#34A853"
        />
        <path
          d="M0 0h18v18H0z"
          fill="none"
        />
      </g>
    </svg>
  </div>
  <span
    style={
      Object {
        "fontWeight": 500,
        "paddingBottom": 10,
        "paddingLeft": 0,
        "paddingRight": 10,
        "paddingTop": 10,
      }
    }
  >
    Sign in with Google
  </span>
</div>
`;
